--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
-/* style.css */
 body {
   text-align: center;
   font-family: 'Segoe UI', sans-serif;
-  background-color: #f0f8ff;
+  background-color: #fffbe8;
 }
 
-#gameCanvas {
-  border: 3px solid #aaa;
-  background-color: #fff;
+canvas {
+  border: 3px solid #888;
+  background-color: #ffffff;
 }
 
 .info {
